chore: use my_example as account name

--- a/hello-world-goodbye.yml
+++ b/hello-world-goodbye.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup, query and delete again an Uberspace
-  hosts: g_uberspace_argh
+  hosts: g_uberspace_my_example
   gather_facts: no
 
   collections:
